policies/kyverno/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: k8s-soar-disallow-latest-tag
  annotations:
    policies.kyverno.io/title: Disallow Latest Image Tag
    k8s-soar.io/scenario: "06-missing-security-context"
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: disallow-latest
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Using ':latest' tag is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
